- github issue: the mask row/column handlers are visible when the page is loaded for the first time

--- a/assets/less_iframe/iframe_main.less
+++ b/assets/less_iframe/iframe_main.less
@@ -106,6 +106,7 @@ html.tdc-active #wpadminbar {
   top: 0;
   width: 0;
   min-height: 50px; // the height of an empty element
+  display: none;
 }
 
 #tdc-mask-content {
@@ -116,6 +117,7 @@ html.tdc-active #wpadminbar {
   pointer-events: none;
   position: absolute;
   z-index: 2;
+  display: none;
 }
 
 #tdc-mask-row,
